# verna-agentic-rag-app

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
core/: graph.py
loaders/: document_loader.py
store/: vector_store.py
