[project]
name = "verna-agentic-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.15.0",
    "chromadb==1.5.9",
    "crewai>=0.193.2",
    "crewai-tools>=0.76.0",
    "docx2txt==0.9",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain==1.3.11",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters==1.1.2",
    "langgraph>=1.2.6",
    "lxml==6.1.1",
    "openai==2.43.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.9",
    "pypdf==6.14.2",
    "python-docx==1.2.0",
    "python-dotenv>=1.2.2",
    "requests==2.34.2",
    "streamlit==1.58.0",
    "tavily-python>=0.7.26",
    "tiktoken==0.13.0",
    "uvicorn[standard]>=0.49.0",
]
